# faim-prefect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yaml
src/faim_prefect/: enum_block.py  env.py  io.py  mamba.py  parameter.py  prefect.py  system.py
src/faim_prefect/block/: choices.py
src/faim_prefect/parallelization/: utils.py
src/futils/: env.py  io.py  prefect.py  slurm.py  system.py
tests/: test_env.py  test_io.py  test_system.py
