[metadata]
name = futils
description = Some utility functions for workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/flow-utils.git
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/flow-utils/issues
    Documentation = https://github.com/fmi-faim/flow-utils#README.md
    Source Code = https://github.com/fmi-faim/flow-utils
    User Support = https://github.com/fmi-faim/flow-utils/issues

[options]
packages = find:
install_requires =
    distro
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
